<resources>
    <string name="app_name">PresIN</string>
    <string name="ok">Ok</string>
    <string name="some_error_occoured">Some error occured</string>
    <string name="error">Error</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_message">You are offline</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_registered_credentials">Enter your registered credentials</string>
    <string name="login">Login</string>
    <string name="dummy_your_email">youremail123@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dummy_your_password">************</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="login_text">Log in</string>
    <string name="enter_password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_phone">+91-798-084-5394</string>
    <string name="nextstep">Next Step</string>
    <string name="dummy_your_admin">No</string>
    <string name="role">Role</string>
    <string name="admin">Are you an Admin</string>
    <string name="organization">Organization</string>
    <string name="dummy_your_organization">Select Organization</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question_mark">Forgot Password ?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_get_you_registered">Let\'s get you Registered</string>
    <string name="enter_your_personal_details">Enter your personal details</string>
    <string name="your_organization">Your Organization</string>
    <string name="tell_us_about_your_current_organization">Tell us about your current organization</string>
    <string name="enter_your_registered_email">Enter your registered Email</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="invalid_password">Password is not valid</string>
    <string name="back">Back</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="you_may_skip_this_and_add_it_later">You may skip this and add it later</string>
    <string name="scanning_face_details">Scanning Face Details</string>
    <string name="position_your_face_in_the_camera_frame">Position your face in the camera frame</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="we_ve_sent_an_otp_in_your_email">We’ve sent an OTP in your email</string>
    <string name="didnt_receive_any_mail">Didn’t receive any mail?</string>
    <string name="resend">Resend</string>
    <string name="wrong_otp_description">The OTP you entered is wrong or invalid</string>
    <string name="wrong_otp_title">Wrong OTP</string>
    <string name="set_new_password">Set new password</string>
    <string name="you_must_enter_a_different_password">You must enter a different password</string>
    <string name="success_your_new_has__been_saved">Success! Your new password has been saved.</string>
    <string name="empty_name">Please Enter your Name</string>
    <string name="empty_email">Please Enter your Email</string>
    <string name="empty_phone">Please Enter your Phone Number</string>
    <string name="empty_password">Please Enter your Password</string>
    <string name="empty_role">Please select the Role</string>
    <string name="empty_admin">Please select whether you are Admin or not</string>
    <string name="empty_organization">Please select the Organization</string>
    <string name="empty_face">Please scan you face properly</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="avatar_error">Avatar cannot be set</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="attendees">Attendees</string>
    <string name="roles_text_hint">Eg. Student, Teacher...</string>
    <string name="cant_fint_role">Can\'t find the role?</string>
    <string name="loading">Loading</string>
    <string name="eg_google_amazon">Eg. Google, Amazon...</string>
    <string name="cant_find_the_organization">Can\'t find the organization?</string>
    <string name="choose_admin_status">Choose admin status</string>
    <string name="optional">(Optional)</string>
    <string name="no_im_not_an_admin">No, I\'m not an Admin</string>
</resources>