<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.register.avatar_register.AvatarRegisterFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/skip_or_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/register_title_text_view"
                style="@style/MontserratMedium24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_profile_picture"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/register_subtext_text_view"
                style="@style/MontserratRegular14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/you_may_skip_this_and_add_it_later"
                android:textColor="@color/hint_color"
                app:layout_constraintStart_toStartOf="@+id/register_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/register_title_text_view" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/image_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_title_text_view" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="68dp"
                app:srcCompat="@drawable/add_face_button"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:progress="0"
                android:progressTint="@color/main_blue"
                android:progressBackgroundTint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        style="@style/MontserratMedium16sp"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginVertical="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/back_button_bg"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <com.geekymusketeers.presin.ui.custom_views.CustomButton
        android:id="@+id/skip_or_next_button"
        style="@style/MontserratMedium22sp"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginVertical="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:header="@string/skip"
        app:inputEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/center_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>